# WW_Agent

./: .gitattributes  .gitignore  README.md  agent_display.py  agent_paths.py  bandit-baseline.json  cli.py  install.ps1  project_context.py  prompt_rules.py  pyproject.toml  requirements.txt  setup.cfg  start_web.bat  用户手册.md  邀请码开关.bat
.agent/agents/: comm-agent.card.json  skill-agent.card.json  tool-agent.card.json
.github/workflows/: ci.yml
agents/comm_agent/: README.md  a2a_protocol.py  agent_card.py  caddy_supervisor.py  main.py  mcp_tools.py  peer_registry.py
agents/shared/: a2a_server.py  authz.py  mcp_server.py  mock_chat_model.py  permission_modes.py  telemetry.py
agents/skill_agent/: a2a_client.py  main.py  skill_executor.py
agents/tool_agent/: agent_loop.py  clarify_bridge.py  main.py  tool_executor.py
bridge/: __init__.py
bridge/hermes_a2a/: __init__.py  __main__.py  acp_client.py  dispatchers.py
config/: __init__.py  _credentials.py  _llm.py  _providers.py  _settings.py
docs/superpowers/plans/: 2026-06-12-ww-agent-rename-interactive-install.md  2026-06-13-split-repl-commands.md
docs/superpowers/specs/: 2026-06-12-ww-agent-rename-interactive-install-design.md
gateway/: README.md  __init__.py  __main__.py  _constants.py  _feishu_common.py  _pidlock.py  _probe_qq.py  credentials.py  feishu.py  feishu_ws.py  log_tail.py  manager.py  qq.py  runner.py  session_store.py  slash.py
orchestrator/: a2a_client.py  delegation.py  fast_route.py  graph.py  main.py  mcp_host.py  permission_gate.py  picker.py  registry.py  repl_commands.py  repl_controller.py  repl_core_commands.py  repl_gateway_commands.py  repl_model_wizard.py  repl_remote_commands.py  repl_state.py  repl_types.py  repl_ui.py  router.py  specialist_pool.py  stream_mux.py  telemetry.py  turn_context.py  turns.py  ui_input.py
scripts/: change_dify_port.py  check_all_logs.py  check_dify.py  check_dify_api_final.py  check_dify_final.py  check_gateway_final.py  check_gateway_log.py  check_ports.py  check_running.py  debug_dify_api.py  find_ww_agent.py  fix_dify_api.py  fix_dify_permission.py  fix_dify_port.py  fix_dify_ports.py  install_hermes_a2a.ps1  install_hermes_a2a.sh  install_openclaw_a2a.ps1  install_openclaw_a2a.sh  restart_gateway.py  start_all_services.py  start_ww_agent_server.py  start_ww_feishu.py  start_ww_feishu2.py  start_ww_feishu3.py  stop_dify_n8n.py  wait_dify.py
skills/: skill_loader.py
skills/baidu-ecommerce-search/: SKILL.md  _meta.json
skills/baidu-ecommerce-search/scripts/: .baidu_ec_lock  address.py  after_service.py  common.py  compare.py  knowledge.py  lock.py  order.py  ranking.py  spu.py
tests/: __init__.py  test_agent_display.py  test_cli_encoding.py  test_config_overrides.py  test_file_ops.py  test_gateway_log_tail.py  test_mock_provider.py  test_packaging_config.py  test_permissions.py  test_skill_loader.py  test_telemetry.py  test_tool_basic.py  test_tool_homeassistant.py  test_tool_moa.py  test_tool_shell.py  test_tool_vision.py  test_tool_web.py
tests/test_bridge_hermes/: conftest.py  fake_hermes_acp.py  test_acp_client.py  test_dispatchers.py  test_e2e_bridge.py  test_main.py
tests/test_comm_agent/: conftest.py  test_a2a_protocol_client.py  test_a2a_protocol_server.py  test_agent_card.py  test_authz_cross_machine.py  test_caddy_supervisor.py  test_e2e_auth_refuse.py  test_e2e_loopback.py  test_e2e_replay_blocked.py  test_e2e_stream_truncated.py  test_mcp_tools.py  test_peer_registry.py
tests/test_e2e_multi_agent/: test_a2a_peer_call.py  test_authz_violation.py  test_ctrl_c_cancel.py  test_e2e_comm_delegate.py  test_e2e_readonly_blocks_write.py  test_e2e_simple_tool.py  test_e2e_skill_a2a_chain.py  test_e2e_tool_task_delegation.py  test_spawn_and_handshake.py  test_specialist_crash.py
tests/test_gateway/: conftest.py  test_credentials.py  test_feishu_common.py  test_feishu_dedup.py  test_feishu_webhook_security.py  test_gateway_concurrency.py  test_memory_per_user.py  test_pidlock.py  test_qq_helpers.py  test_runner_env.py  test_session_store.py  test_slash.py
tests/test_orchestrator/: conftest.py  test_agent_cards_path.py  test_bootstrap_concurrency.py  test_cancellation_hardening.py  test_delegation_runtime_dir.py  test_delegation_stream.py  test_fast_route.py  test_gateway_env_threading.py  test_gateway_fields.py  test_graph.py  test_llm_planner.py  test_mcp_host.py  test_permission_gate.py  test_registry.py  test_repl_comm.py  test_repl_commands.py  test_repl_controller.py  test_repl_state.py  test_repl_types.py  test_repl_ui.py  test_router.py  test_slash_agents.py  test_specialist_pool.py  test_stream_mux.py  test_turn_context.py  test_turns.py  test_ui_input.py
tests/test_security/: conftest.py  test_auth_and_secrets.py  test_exposure_self_check.py  test_ssrf_base_url.py
tests/test_shared/: test_a2a_server.py  test_authz.py  test_mcp_server.py  test_mock_chat_model.py
tests/test_skill_agent/: test_skill_executor.py
tests/test_tool_agent/: test_a2a_authz.py  test_agent_loop.py  test_clarify_bridge.py  test_clarify_round_trip.py  test_context_forwarding.py  test_mode_gated_tools.py  test_tool_executor.py  test_wrappers_nonblocking.py
tests/test_web/: conftest.py  test_app.py  test_auth.py  test_bridge.py  test_concurrency_isolation.py  test_config.py  test_models.py  test_pin_llm_config.py  test_ratelimit.py  test_static_app_perf.py  test_store.py  test_turn_loop.py
tool/: tool_basic.py  tool_clarify.py  tool_file_ops.py  tool_homeassistant.py  tool_memory.py  tool_moa.py  tool_osv.py  tool_patch.py  tool_permissions.py  tool_shell.py  tool_vision.py  tool_web.py  tool_x_search.py
web/: __init__.py  __main__.py  app.py  auth.py  bridge.py  config.py  crypto.py  models.py  ratelimit.py  store.py  turn_loop.py
web/static/: app.js  index.html  styles.css
